--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -48,6 +48,15 @@
         android:layout_margin="@dimen/fab_margin"
       android:layout_gravity="bottom|end"
         />
+    <TextView android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Add"
+        android:elevation="6dp"
+        android:textSize="18dp"
+        android:textColor="#fff"
+        app:layout_anchor="@id/fab1"
+        app:layout_anchorGravity="center"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab2"
         android:layout_width="wrap_content"
@@ -55,6 +64,14 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_gravity="bottom|start"
         />
+    <TextView android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Upd"
+        android:elevation="6dp"
+        android:textSize="18dp"
+        android:textColor="#fff"
+        app:layout_anchor="@id/fab2"
+        app:layout_anchorGravity="center"/>
 <!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab3"
