--- a/app/src/main/res/layout/fragment_blank_a.xml
+++ b/app/src/main/res/layout/fragment_blank_a.xml
@@ -50,7 +50,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Say Hello to B and C"
+        android:text="Say Hello to Dummies and C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_textA3" />
