--- a/app/src/main/res/layout/fragment_blank_c.xml
+++ b/app/src/main/res/layout/fragment_blank_c.xml
@@ -49,7 +49,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:text="Say Hello to A and B"
+        android:text="Say Hello to A and Dummies"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
